--- a/build.config
+++ b/build.config
@@ -14,7 +14,12 @@
       "resourceType":"gui"
     }
   ],
-  "buildDirs":[],
+  "buildDirs":[
+    {
+      "targetSource":"main.js",
+      "dir":"dev/"
+    }
+  ],
   "compile":[
     {
       "path":"main.js",
@@ -24,5 +29,7 @@
       "path":"launcher.js",
       "sourceType":"launcher"
     }
-  ]
+  ],
+  "nativeDirs":[],
+  "javaDirs":[]
 }
